Dashboard line spacing fix

--- a/public/css/note.css
+++ b/public/css/note.css
@@ -34,3 +34,9 @@
     opacity: .7;
     border-radius: 25px;
 }
+.star-container {
+    background: white;
+    padding: 4px;
+    width: fit-content;
+    border-radius: 20px;
+}
